--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,14 @@ text-transform: uppercase;
 
 
 body{
-	color:  #000 !important; font-family: 'Mukta', sans-serif !important;
+	color:  #000 !important; font-family: 'Mukta', sans-serif !important; 
+	padding-top: 200px !important;
+
+}
+
+
+@media screen and (max-width: 768px) {
+    body { padding-top: 150px !important}
 }
 
 .texto-cinza{
